# piguy.nl

./: .gitignore  Cargo.toml  LICENSE  ci.sh  justfile  wrangler.example.toml
assets/: style.css
src/: component.rs  lib.rs  root_handler.rs  subnetcalc.rs
src/page/: calc.rs  mod.rs  root.rs
